--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,65 @@
+alembic==1.7.6
+aniso8601==9.0.1
+attrs==21.4.0
+bcrypt==3.2.0
+blinker==1.4
+cffi==1.15.0
+click==8.0.4
+colorama==0.4.4
+cs50==9.0.0
+decouple==0.0.7
+distlib==0.3.4
+dnspython==2.2.1
+dominate==2.6.0
+email-validator==1.1.3
+filelock==3.6.0
 Flask==2.0.3
-Click==8.0.4
+Flask-Admin==1.6.0
+Flask-Bcrypt==0.7.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
+flask-mongoengine==1.0.0
+Flask-MySQL==1.5.2
+Flask-MySQLdb==1.0.1
+Flask-RESTful==0.3.9
+flask-restx==0.5.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
 itsdangerous==2.1.1
-jdcal
+jdcal==1.4.1
 jedi==0.18.1
 Jinja2==3.0.3
+jsonschema==4.4.0
+Mako==1.1.6
 MarkupSafe==2.1.1
+mongoengine==0.24.1
+mysqlclient==2.1.0
+parso==0.8.3
+pep517==0.12.0
+Pillow==9.0.1
+platformdirs==2.5.1
+pycparser==2.21
+PyJWT==2.3.0
+pymongo==4.1.0
+PyMySQL==1.0.2
+pyrsistent==0.18.1
+python-decouple==3.5
+python-dotenv==0.19.2
+pytz==2021.3
+six==1.16.0
+SQLAlchemy==1.4.29
+sqlparse==0.4.2
+svgwrite==1.4.1
+termcolor==1.1.0
+timeago==1.0.15
+tomli==2.0.1
+Tree==0.2.4
+virtualenv==20.13.4
+visitor==0.1.3
 Werkzeug==2.0.3
-flask-wtf
-WTForms~=3.0.1
-flask-migrate
-<<<<<<< HEAD
-flask-mongoengine
-flask-login
-python-dotenv
-pymongo==4.0.2
-flask-mail
-=======
-flask-login
-python-dotenv
-flask-mail
-pyjwt
-
->>>>>>> d72058866833c76482d5044a73283986669eb665
+WTForms==3.0.1
